argocd/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argocd.localhost`)
      services:
        - name: argocd-server
          port: 80
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-cli
  namespace: argocd
spec:
  entryPoints:
    - websecure   # must be websecure
  routes:
    - kind: Rule
      match: Host(`argocd-login.localhost`) && Header(`Content-Type`, `application/grpc`)
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
